syntax = "proto3";

option java_multiple_files = true;
option java_package = "hxgm30.raster.api";
option java_outer_classname = "RasterAPIProto";

package api;

// Interface exported by the server.
service ServiceAPI {
  // Respond with what we got
  rpc Echo(GenericData) returns (GenericData) {}
  // Return server health status
  rpc Health(HealthRequest) returns (HealthReply) {}
  // Return "pong" for "ping"
  rpc Ping(PingRequest) returns (PingReply) {}
}

// GenericData ...
message GenericData {
  string data = 1;
}

// HealthRequest ...
message HealthRequest {
  string data = 1;
}

// HealthReply ...
message HealthReply {
  string components = 1;
  string errors = 2;
}

// PingRequest ...
message PingRequest {
  string data = 1;
}

// PingReply ...
message PingReply {
  string data = 1;
}
